2020-09-13  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-page-nav--google-style-next): Simplify and make
	language-agnostic

2020-09-11  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url):
	Add support for website-specific navigation logic.
	(w3m-page-navigation-sites): New defcustom data structure to support
	website-specific navigation logic.
	(w3m-page-nav--google-style-next)
	(w3m-page-nav--google-style-previous): Add support for the website
	navigation style used in google search pages.

2020-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-move-right, w3m-tab-move-left):
	Do nothing if no room to move for given prefix argument.
	(w3m-tab-make-keymap): Pass prefix arg to w3m-tab-move-right/left.

2020-09-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-ems.el (w3m-tab-move-right, w3m-tab-move-left): BUGFIX: moving
	with prefix-arg > 1 was swapping tab positions instead of adjusting all
	tab numbers in between (PR#82).

2020-09-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-scroll-down-or-previous-url): BUGFIX: scrolling to top of
	page sometimes cycled back to bottom.
	(w3m-page-navigation-labels): Improve english regex.

2020-09-07  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-next-page-label, w3m-previous-page-label)
	(w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url):
	Additional logic to catch 'next' and 'previous' page links not
	identified within an HTML tag.
	(w3m-scroll-interval, w3m-set-scroll-interval): New defcustom to set
	default scroll interval for 'long scrolls'
	(w3m-page-navigation-labels): regexp cons list for identifying labels
	(w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url):  Use new
	variable.
	(w3m-scroll-down-or-previous-url, w3m-scroll-up-or-next-url): bugfix:
	when new page no longer uses old label.

2020-08-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub-optional-elements): Forgot to escape